# SimpleCalC

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: build.yml
include/: Calculator.h
src/: Calculator.cpp  main.cpp
tests/: CMakeLists.txt  test_calculator.cpp
